# facial-recognition-based-attendance

./: .gitignore  README.md  db.py  detection.py  face_dectection.py  face_detetction.py  face_prediction.py  face_recognition.py  helpers.py  image_capture.py  logger.py  mail.py  main.py  pyproject.toml  test.py  training.py  video.py  video_capture.py
bridges/: admin_dashboard.py  attendance.py  login.py  teacher_dashboard.py
constants/: tables.py
database/: db.py
exceptions/: not_exist.py
models/: attendance.py  course.py  student.py  teacher.py
repositories/: attendance_repository.py  course_repository.py  student_repository.py  teacher_repository.py
ui/: admin_dashboard.qml  dashboard.qml  login.qml  main.qml  teacher_dashboard.qml  test.qml
