[tool.poetry]
name = "facial-recognition-based-attendance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pyside6 = "^6.6.0"
opencv-contrib-python = "^4.8.1.78"
python-decouple = "^3.8"
supabase = "^1.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
